# encrypted-vault

./: EncryptedVault.spec  LICENSE  README.md  build_exe.bat  install.bat  main.py  pyproject.toml  requirements.txt  run_gui.py  run_gui_debug.bat  vault-settings.example.json  Запуск GUI.bat
scripts/: test_embed.py
vault/: __init__.py  app_store.py  cli.py  container.py  crypto_utils.py  exe_embed.py  gui_app.py  protection.py  settings.py  time_verify.py  timelock.py
