[project]
name = "encrypted-vault"
version = "1.0.0"
description = "Password-protected encrypted file container with GUI and CLI (AES-256-GCM, Argon2id)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
encrypted-vault = "main:main"
encrypted-vault-gui = "run_gui:main"

[tool.pytest.ini_options]
testpaths = []
